--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "format:js": "biome check src/ --write --unsafe"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/api": "^2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.5",
